--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
-
+/node_modules
 /public/hot
 /public/storage
 /storage/*.key
 /.idea
 /.vagrant
+/vendor
 Homestead.json
 Homestead.yaml
 npm-debug.log
