Alteração para listagem de produtos por categoria

--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
     "devDependencies": {
         "axios": "^0.17",
         "bootstrap-sass": "^3.3.7",
-        "cross-env": "^5.1",
+        "cross-env": "^5.2.0",
         "jquery": "^3.2",
         "laravel-mix": "^1.0",
         "lodash": "^4.17.4",
         "vue": "^2.5.7"
     },
     "dependencies": {
-        "datatables.net-dt": "^1.10.16"
+        "ajv": "^6.5.1",
+        "datatables.net-dt": "^1.10.19"
     }
+  
 }
